# simulation-rock_gazebo

./: .gitignore  CMakeLists.txt  README.md  manifest.xml
bindings/ruby/: CMakeLists.txt
bindings/ruby/lib/rock/: gazebo.rb
bindings/ruby/lib/rock_gazebo/: orogen_model_from_sdf_world.rb  root_logger.rb  syskit.rb  test.rb  viz.rb
bindings/ruby/lib/rock_gazebo/syskit/: configuration_extension.rb  features.rb  instance_requirements_extension.rb  profile_extension.rb  robot_definition_extension.rb  root_logger.rb  sdf.rb  test.rb
bindings/ruby/test/: helpers.rb  test_gazebo.rb  test_orogen_model_from_sdf_world.rb  test_plugin.rb  test_plugin_GPSTask.rb  test_plugin_ImuTask.rb  test_plugin_ModelTask.rb
bindings/ruby/test/data/: sensor.world
bindings/ruby/test/models/empty/: model.sdf
bindings/ruby/test/models/gps/: model.config  model.sdf
bindings/ruby/test/models/imu/: model.sdf
bindings/ruby/test/models/model/: model.config  model.sdf
bindings/ruby/test/models/model_with_plugin/: model.config  model.sdf
bindings/ruby/test/syskit/: helpers.rb  test_profile_extension.rb  test_robot_definition_extension.rb  test_sdf.rb
bindings/ruby/test/worlds/: attached_model_with_plugin.world  attached_model_with_submodel.world  attached_simple_model.world  freefall.world  gps-check-utm.world  gps-custom-rate.world  gps-far-from-origin.world  gps-nested.world  gps-noise.world  gps.world  imu-custom-rate.world  imu-nested.world  imu-not-aligned.world  imu.world  joints_export.world  model-nested.world  model.world  simple_model.world  wrench.world
(+9 files in other folders)
